[tool.poetry]
name = "rb-viz"
version = "0.1.0"
description = ""
authors = ["Robbie Capps <rocapp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
open3d = "^0.18.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
